# dynamic-struct

./: Cargo.toml  LICENSE  README.md
examples/: demo.rs
src/: lib.rs
